// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FrontPage /> renders correctly 1`] = `
<Fragment>
  <PostPreviewList
    highlightedPosts={Immutable.List []}
    posts={Immutable.List []}
  />
  <div
    className="loaderWrapper"
  >
    <LoadPostsButton
      loadPosts={[Function]}
    />
  </div>
</Fragment>
`;

exports[`<FrontPage /> renders correctly on error 1`] = `
<div>
  Kunne ikke laste inn forsiden.
</div>
`;

exports[`<FrontPage /> renders correctly while loading 1`] = `
<Fragment>
  <PostPreviewList
    highlightedPosts={Immutable.List []}
    posts={Immutable.List []}
  />
  <div
    className="loaderWrapper"
  >
    <Loader />
  </div>
</Fragment>
`;
